# tello-ros2

./: .gitignore
workspace/src/tello/: package.xml  setup.py
workspace/src/tello/tello/: node.py
workspace/src/tello_control/src/: main.cpp
workspace/src/tello_msg/msg/: TelloStatus.msg
