<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello</name>
  <version>0.0.1</version>
  <description>Package to control DJI tello drones, provides data and control over the drone based on the official SDK provided by DJI.</description>
  <maintainer email="tentone@outlook.com">tentone</maintainer>
  <license>MIT</license>

  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tello_msg</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Non-ROS System Dependencies (for rosdep) -->
  <exec_depend>python3-numpy</exec_depend>
  <!-- <exec_depend>python3-djitellopy2</exec_depend> -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- <exec_depend>python3-av</exec_depend> -->

  <!-- Test Dependency -->
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
